added price form in footer and navigation bar with companies info

--- a/index.html
+++ b/index.html
@@ -116,7 +116,21 @@
 
     <!-- Footer of the page -->
     <footer>
-      <small> &copy; Lindt 2023 </small>
+      <img src="images/logo.png" alt="logo" width="2000" height="787" />
+      <section class="nav-form">
+        <h2 class="hidden">Footer navigation</h2>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <form action="nothing.php">
+          <label for="email">Get Pricing</label>
+          <input type="text" placeholder="example@gmail.com" />
+          <input type="submit" class="btn" />
+        </form>
+      </section>
+      <p>&copy; Lindt 2023</p>
     </footer>
   </body>
 </html>
