Small changes are done and consider it as version 1.1V

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             chocolate to our signature truffles, there's something for every
             chocolate lover.
           </p>
-          <a href="#" class="btn">Shop Now</a>
+          <a href="#Pricing" class="btn">Shop Now</a>
         </section>
         <section class="hero-image">
           <!-- Putting heading as a section requires an heading. But I don't want it to show to users -->
@@ -124,7 +124,7 @@
           <li><a href="#About">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <form action="nothing.php">
+        <form action="nothing.php" id="Pricing">
           <label for="email">Get Pricing</label>
           <input type="text" placeholder="example@gmail.com" />
           <input type="submit" class="btn" />
