--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- This links to an external stylesheet for the document's styling -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Adding SVG file -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/candy.svg" />
   </head>
 
   <body>
@@ -116,7 +118,13 @@
 
     <!-- Footer of the page -->
     <footer>
-      <img src="images/logo.png" alt="logo" width="2000" height="787" />
+      <img
+        class="footer-log"
+        src="images/logo.png"
+        alt="logo"
+        width="2000"
+        height="787"
+      />
       <section class="nav-form">
         <h2 class="hidden">Footer navigation</h2>
         <ul>
